Stop useless disklabel warning if there are wedges, using GPT partition. Fix PR kern/47989.

XXX: Pullup 6 and 7 (maybe 5)